--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg px-2">
         <div class="container">
           <a class="navbar-brand" href="#">
-             <div class="container">
+             <div class="conta">
                  <img src="img/logomain.png" alt="whether">
                  <div class="text-contain">
                      <h1>Whether</h1>
